--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
     "build": "remix build",
     "deploy": "deployctl deploy --prod --include=build,public --project=<your deno deploy project> ./build/index.js",
     "dev": "remix build && run-p dev:*",
-    "dev:deno": "cross-env NODE_ENV=development deno run --unstable --watch --allow-net --allow-read --allow-env ./build/index.js",
+    "dev:deno": "cross-env NODE_ENV=development deno run --unstable --watch --allow-net --allow-read --allow-env --no-check=remote ./build/index.js",
     "dev:remix": "remix watch",
     "format": "deno fmt --ignore=node_modules,build,public/build",
     "lint": "deno lint --ignore=node_modules,build,public/build",
-    "start": "cross-env NODE_ENV=production deno run --unstable --allow-net --allow-read --allow-env ./build/index.js"
+    "start": "cross-env NODE_ENV=production deno run --unstable --allow-net --allow-read --allow-env --no-check=remote ./build/index.js"
   },
   "dependencies": {
-    "@remix-run/deno": "^1.5.1",
+    "@remix-run/deno": "https://gitpkg.now.sh/justjavac/remix/packages/remix-deno?deno-std-143",
     "@remix-run/react": "^1.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
