--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "typecheck": "deno check --import-map .vscode/resolve_npm_imports.json server.ts app/*.tsx app/*/*.tsx"
   },
   "dependencies": {
-    "@remix-run/deno": "https://gitpkg.now.sh/justjavac/remix/packages/remix-deno?deno-std-143",
-    "@remix-run/react": "^1.5.1",
+    "@remix-run/deno": "*",
+    "@remix-run/react": "*",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.5.1",
+    "@remix-run/dev": "*",
     "cross-env": "^7.0.3",
     "npm-run-all": "^4.1.5"
   },
